# os-monitor-service

./: .env  .env.example  .gitignore  Cargo.toml  Readme.md  build.rs
.sqlx/: query-01c33145ac5e3440bf3c598510ed07e142e0a7708bfef13557b0abf34d9dfda6.json  query-02182f28409e917ff2768163d9e25d6c7fa40d2a142c6d9bb0359b7b0200895f.json  query-02a366ce690fdec72c7e4af8217fe46c5c4dd64b1183a8ce3a4a897ec1bf4e4f.json  query-0a4574f07cc44eeb596cf044cc3051c85c0491d23fbf492de89e6e91ec65a359.json  query-0b122271d18986077cf80919bf4bcba7ac28c9267c5f2759963e62d5e2ecba33.json  query-0fc8654a2d8f41dc6a4248f8e89e5535cffe42a59d4b4463a226a78ca46d3488.json  query-15b2e68bc1fe2e248a62fc5dd06fa8ffcd3c8ff636fff34a02ad38dfec69dcc1.json  query-16fb0a87afc3550f3c5116da8d78400a125021c8536adfdcf3314aaa11e0ee5e.json  query-1a6d28df9bd20f779aca2efbfcafa40ae0d938a2012f51b0774123594b520f3a.json  query-1edcfb3ab477fec78920440dad349bcf9865ed35b5238c06c246b646d1a1c077.json  query-22b09b033e8cd6f2d31d5dea68b8787e6f4bf0199c09901f3fd9866093f9bd2a.json  query-2968f6550c0af4b93c8c8fd615b40d32c5b9fad661d8893e2dc1b721c1185a02.json  query-2d6ef89c2ae5223f02a1036ce2b239e0945dea854c0392c0aaca4058494e42c1.json  query-2f659238bdefdce94b50dc004ca493388910492518ad7af35e375f9c2cef6422.json  query-30f459e1778dbcf8c2291fd9283dd01a76482a9bc9ba46f97c28fbb2561940f3.json  query-32832d5139db75a52d4c32cf87217a6445b2689a2951d09650eb7d914ca3f01f.json  query-39aae4d11b5ae39c588294333c6e67b3e735a7208087e0bcd6ad5f42340ace3e.json  query-3ae4d665d7ab509fe8539fcda4b0afec106ef987dc749973e933a5e1cf87ffc8.json  query-40c8adb02912118e570fd084d414947dede7fb2a7293a2dc7d08543cf7d08824.json  query-4e0769af8691e39c84f0c3068688a8bd210e4c04b7ecaa0a36d9a9a6611630bd.json  query-4f19961fc500009645ec1b5ba2bcb141c52eed8d765bbd934a74eea80dd7da4c.json  query-52b74e8cdd2ab08d65691e9b95e919ce3d99a932d4cfe93c6d61fc4495cef198.json  (+24 more)
migrations/: 20241206033646_create_activity.sql  (+12 more)
src/: lib.rs  (+2 more)
(+24 files in other folders)
