[package]
name = "monitoring-service"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
dotenv = "0.15.0"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio", "time"] }
tokio = { version = "1.42.0", features = ["full"] }
time = { version = "0.3", features = ["serde"] }
os-monitor = { version = "0.1.1"}
parking_lot = "0.12"
once_cell = "1.20.2"

[build-dependencies]
sqlx = "0.8.2"
