[package]
name = "os-monitor-service"
version = "0.4.3"
edition = "2021"
authors = ["Paul Hovley <rphovley@gmail.com>"]
description = "OS level monitor for recording window focus and input events from os_monitor"
license = "MIT"
repository = "https://github.com/CodeClimbersIO/os-monitor-service"

[dependencies]
dirs = "6.0.0"
dotenv = "0.15.0"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio", "time"] }
tokio = { version = "1.42.0", features = ["full"] }
time = { version = "0.3", features = ["serde"] }
os-monitor = { version = "0.4.3" }
parking_lot = "0.12"
once_cell = "1.20.2"
log = "0.4.25"
env_logger = "0.11.6"
url = "2.5.4"
uuid = { version = "1.13.1", features = ["v4"] }

[build-dependencies]
sqlx = "0.8.2"
